--- a/sass/tweetsD.sass
+++ b/sass/tweetsD.sass
@@ -7,6 +7,7 @@
 
     .tweet 
         border-style: inset
+        border-color: black
         border-width: 2px
         border-radius: 10px
         width: 100%
